--- a/app/src/main/res/layout/cell.xml
+++ b/app/src/main/res/layout/cell.xml
@@ -5,7 +5,8 @@
     android:layout_height="match_parent">
 
     <View
+        android:id="@+id/square"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#ffff0000" />
+        android:background="#ffeeeeee" />
 </RelativeLayout>
